[package]
name = "ratada"
version = "0.1.0"
edition = "2024"
# Uses `let`-chains, stabilized in Rust 1.88.
rust-version = "1.88"
description = "A ratatui widget toolkit: driver, modals, forms, pickers, theming"
license = "MIT"
repository = "https://github.com/cgroening/rs-ratada"
readme = "README.md"
keywords = ["tui", "ratatui", "widgets", "terminal", "toolkit"]
categories = ["command-line-interface"]
# Ship only the crate itself; contributor docs live in the repository.
include = ["src/**/*.rs", "README.md", "LICENSE"]

[dependencies]
# https://crates.io/crates/ratatui
ratatui = "0.29"
# https://crates.io/crates/crossterm
crossterm = "0.28"
# https://crates.io/crates/unicode-width
unicode-width = "0.2"
# https://crates.io/crates/nucleo-matcher
nucleo-matcher = "0.3"
# https://crates.io/crates/serde
serde = { version = "1.0", features = ["derive"] }
# https://crates.io/crates/chrono
chrono = "0.4"
# https://crates.io/crates/log
log = { version = "0.4", features = ["std"] }

[lints.clippy]
all = { level = "warn", priority = -1 }
