[package]
name = "ratada"
version = "0.3.0"
edition = "2024"
# Uses `let`-chains, stabilized in Rust 1.88.
rust-version = "1.88"
authors = ["Corvin Gröning"]
description = "A ratatui widget toolkit: driver, modals, forms, pickers, theming"
license = "MIT"
repository = "https://github.com/cgroening/rs-ratada"
homepage = "https://github.com/cgroening/rs-ratada"
documentation = "https://docs.rs/ratada"
readme = "README.md"
keywords = ["tui", "ratatui", "widgets", "terminal", "toolkit"]
categories = ["command-line-interface"]
# Ship the crate, the runnable examples and the changelog; contributor-only docs
# (DEVELOPMENT.md, CONTRIBUTING.md, docs/) stay in the repository.
include = [
    "src/**/*.rs",
    "examples/**/*.rs",
    "README.md",
    "CHANGELOG.md",
    "LICENSE",
]

# Reproducible docs.rs builds: document every feature on the default target.
[package.metadata.docs.rs]
all-features = true

[dependencies]
# https://crates.io/crates/ratatui
ratatui = "0.30"
# https://crates.io/crates/crossterm
crossterm = "0.29"
# https://crates.io/crates/unicode-width
unicode-width = "0.2"
# https://crates.io/crates/nucleo-matcher
nucleo-matcher = "0.3"
# https://crates.io/crates/pulldown-cmark
pulldown-cmark = { version = "0.13", default-features = false }
# https://crates.io/crates/serde
serde = { version = "1.0", features = ["derive"] }
# https://crates.io/crates/chrono
chrono = "0.4"
# https://crates.io/crates/log
log = { version = "0.4", features = ["std"] }

[target.'cfg(windows)'.dependencies]
# Native Win32 clipboard access, avoiding a slow PowerShell subprocess per
# copy/paste. https://crates.io/crates/clipboard-win
clipboard-win = "5"

[lints.clippy]
all = { level = "warn", priority = -1 }
